--- a/.fastRequest/config/fastRequestCurrentProjectConfig.json
+++ b/.fastRequest/config/fastRequestCurrentProjectConfig.json
@@ -1,11 +1,25 @@
 {
-	"dataList":[],
-	"envList":[],
+	"dataList":[
+		{
+			"hostGroup":[
+				{
+					"env":"local",
+					"url":"http://localhost:11011"
+				}
+			],
+			"name":"cosmetics"
+		}
+	],
+	"envList":[
+		"local"
+	],
 	"headerList":[],
 	"maxDescriptionLength":-1,
 	"postScript":"",
 	"preScript":"",
-	"projectList":[],
+	"projectList":[
+		"cosmetics"
+	],
 	"syncModel":{
 		"branch":"master",
 		"domain":"https://github.com",
