--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=11011
+
+#database oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=dear_beauty
+spring.datasource.password=123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=true
+
 
